Final, submitted version

--- a/main/ch2_background.tex
+++ b/main/ch2_background.tex
@@ -120,15 +120,15 @@ It is important to note that the haemodynamic response (HRF) which enables BOLD 
 
 \subsection{Task-based fMRI in the study of brain function}
 
-A popular experimental design in functional studies is task-based fMRI (tb-fMRI). In this paradigm, participants are asked to repeatedly perform a specific task for a certain time (often referred to as a "block"), followed by a contrasting block (e.g., a "resting" period). By probing into BOLD signal differences between these conditions, it becomes then possible to identify parts of the brain which selectively activate or de-activate according to the task \citep{Friston1995a}.
+A popular experimental design in functional studies is task-based fMRI (tb-fMRI). In this paradigm, participants are asked to repeatedly perform a specific task for a certain time (often referred to as a "block"), followed by a contrasting block (\textit{e.g.}, a "resting" period). By probing into BOLD signal differences between these conditions, it becomes then possible to identify parts of the brain which selectively activate or de-activate according to the task \citep{Friston1995a}.
 
 \subsubsection{Static analysis of task-Based fMRI}
 
-Task-based paradigms (as opposed to resting-state ones, see Section \ref{subsec:ch2_restingState}) rely on prior knowledge about external stimuli that may be driving brain activity. The most traditionally used approach to tb-fMRI analysis is the General Linear Model (GLM). This method examines the temporal synchrony between predicted responses and a voxel’s time series by modeling the latter as a linear combination of several factors that contribute to the signal \citep{Friston1995a}. In that way, the GLM is more flexible than, for example, a simple correlation analysis, in that it allows the inclusion as model factors of several experimental conditions, as well as of other known (e.g., motion parameters) or possible (e.g., behavioural information, subjects’ age, etc.) sources of variability. Typically, a comparison between task response is then done by subtracting conditions (e.g., task A - task B), or a factorial analysis is performed when the experimental design includes more than one factor (e.g., cognitive process). The statistical significance of the GLM’s results then reflects how well an experimental observation is fit by the model \citep{Worsley1995}. One of the drawbacks of this approach is that, although it reveals the magnitude of an effect, it does not provide information about its duration, nor is it possible to capture inter-subject differences in timing \citep{Robinson2009}. Nonetheless, this has been one of the most widely used methods in fMRI analysis with several applications and extensions being proposed \citep{Dale1999, Glover1999, Goldman2000, Laufs2003}.
+Task-based paradigms (as opposed to resting-state ones, see Section \ref{subsec:ch2_restingState}) rely on prior knowledge about external stimuli that may be driving brain activity. The most traditionally used approach to tb-fMRI analysis is the General Linear Model (GLM). This method examines the temporal synchrony between predicted responses and a voxel’s time series by modeling the latter as a linear combination of several factors that contribute to the signal \citep{Friston1995a}. In that way, the GLM is more flexible than, for example, a simple correlation analysis, in that it allows the inclusion as model factors of several experimental conditions, as well as of other known (\textit{e.g.}, motion parameters) or possible (\textit{e.g.}, behavioural information, subjects’ age, etc.) sources of variability. Typically, a comparison between task response is then done by subtracting conditions (\textit{e.g.}, task A - task B), or a factorial analysis is performed when the experimental design includes more than one factor (\textit{e.g.}, cognitive process). The statistical significance of the GLM’s results then reflects how well an experimental observation is fit by the model \citep{Worsley1995}. One of the drawbacks of this approach is that, although it reveals the magnitude of an effect, it does not provide information about its duration, nor is it possible to capture inter-subject differences in timing \citep{Robinson2009}. Nonetheless, this has been one of the most widely used methods in fMRI analysis with several applications and extensions being proposed \citep{Dale1999, Glover1999, Goldman2000, Laufs2003}.
 
-From all GLM extensions, Psychophysiological Interaction (PPI) analysis is of particular interest here, as it concerns \textit{modulation} of functional connectivity. Originally proposed by \citeauthor{Friston1997} in \citeyear{Friston1997}, PPI determines which voxels enhance their relationship with a user-defined seed in a particular context (i.e., during a specific behavioural task). This is achieved by including at least three regressors in the model: 1)~the time course of the seed; 2)~the task time course; and 3)~the interaction regressor, calculated as an element-by-element multiplication of the seed’s activity and the task time courses. Including the first two guarantees that the variance explained by the PPI is over and above that explained by the task or by physiological correlations’ main effects \citep{OReilly2012a}. In that sense, voxels whose activity is well described by the interaction regressor (also called the PPI regressor) are those that have a stronger relationship with the seed during the task of interest. 
+From all GLM extensions, Psychophysiological Interaction (PPI) analysis is of particular interest here, as it concerns \textit{modulation} of functional connectivity. Originally proposed by \citeauthor{Friston1997} in \citeyear{Friston1997}, PPI determines which voxels enhance their relationship with a user-defined seed in a particular context (\textit{i.e.}, during a specific behavioural task). This is achieved by including at least three regressors in the model: 1)~the time course of the seed; 2)~the task time course; and 3)~the interaction regressor, calculated as an element-by-element multiplication of the seed’s activity and the task time courses. Including the first two guarantees that the variance explained by the PPI is over and above that explained by the task or by physiological correlations’ main effects \citep{OReilly2012a}. In that sense, voxels whose activity is well described by the interaction regressor (also called the PPI regressor) are those that have a stronger relationship with the seed during the task of interest. 
 
-An alternative to these confirmatory analyses is to employ exploratory methods, which do not rely on prior knowledge. Principal component analysis, for example, can be used for dimensionality reduction by mapping the data into a reduced space that maximises the variance, and is often used as a first step in the fMRI analysis pipeline \citep{Zhong2009}. Of note, partial least squares (PLS) analysis \citep{Randal2004} maximises the co-variance between two modalities, making it possible to find links between multi-modal data (i.e., fMRI and behavioural data). By analysing task-related brain metrics in conjunction with behavioural or clinical outcomes, for example, this method makes it possible to characterise the neurological substrate of cognitive functions \citep{Roberts2017}.
+An alternative to these confirmatory analyses is to employ exploratory methods, which do not rely on prior knowledge. Principal component analysis, for example, can be used for dimensionality reduction by mapping the data into a reduced space that maximises the variance, and is often used as a first step in the fMRI analysis pipeline \citep{Zhong2009}. Of note, partial least squares (PLS) analysis \citep{Randal2004} maximises the co-variance between two modalities, making it possible to find links between multi-modal data (\textit{i.e.}, fMRI and behavioural data). By analysing task-related brain metrics in conjunction with behavioural or clinical outcomes, for example, this method makes it possible to characterise the neurological substrate of cognitive functions \citep{Roberts2017}.
 
 
 
@@ -139,7 +139,7 @@ An alternative to these confirmatory analyses is to employ exploratory methods, 
 
 \subsection{Resting-state fMRI in the study of brain function} \label{subsec:ch2_restingState}
 
-In the mid 90's, \citep{Biswal1995} showed in an original study that even at rest, activity in the motor cortex is remarkably structured and bilaterally coherent, despite the absence of an explicit motor task. Since then, resting-state functional magnetic resonance imaging (rs-fMRI) has become a widely used tool to investigate temporal fluctuations in neuronal activity by looking into  BOLD signals across the brain \citep{Damoiseaux2006, Fox2007}. Thanks to the absence of goal-directed stimulation or activity, this paradigm is particularly well suited for studying and comparing brain function between populations who might respond to task instructions with different levels of cognitive ability or attention such as clinical; ageing; or very young cohorts, because it has minimal compliance requirements. Additionally, provided that the same image acquisition parameters are used, this allows data recorded across multiple research centers to be pooled or compared, given that there is no variability task demands. These results are comparable even when the conditions slightly differ across studies (e.g., eyes closed; open; with or without fixation; etc.), so those can be appropriately chosen according to the comfort of the targeted population \citep{Soares2016}. Furthermore, this data can be acquired in a relatively short time, with sessions of 5\textendash7 min yielding a reasonable trade-off between acquisition time and the robustness of results in adults \citep{VanDijk2010, Whitlow2011}. In young children, 5.5 min has been shown to be an acceptable duration, to avoid head motion due to their becoming too restless \citep{White2014a}. 
+In the mid 90's, \citep{Biswal1995} showed in an original study that even at rest, activity in the motor cortex is remarkably structured and bilaterally coherent, despite the absence of an explicit motor task. Since then, resting-state functional magnetic resonance imaging (rs-fMRI) has become a widely used tool to investigate temporal fluctuations in neuronal activity by looking into  BOLD signals across the brain \citep{Damoiseaux2006, Fox2007}. Thanks to the absence of goal-directed stimulation or activity, this paradigm is particularly well suited for studying and comparing brain function between populations who might respond to task instructions with different levels of cognitive ability or attention such as clinical; ageing; or very young cohorts, because it has minimal compliance requirements. Additionally, provided that the same image acquisition parameters are used, this allows data recorded across multiple research centers to be pooled or compared, given that there is no variability task demands. These results are comparable even when the conditions slightly differ across studies (\textit{e.g.}, eyes closed; open; with or without fixation; etc.), so those can be appropriately chosen according to the comfort of the targeted population \citep{Soares2016}. Furthermore, this data can be acquired in a relatively short time, with sessions of 5\textendash7 min yielding a reasonable trade-off between acquisition time and the robustness of results in adults \citep{VanDijk2010, Whitlow2011}. In young children, 5.5 min has been shown to be an acceptable duration, to avoid head motion due to their becoming too restless \citep{White2014a}. 
 
 In the preterm population, rs-fMRI has often been used in the context of functional connectivity (FC) analyses (see Section \ref{sub:static_rsfmri}), measuring temporal correlations between the activity of different brain regions or networks \citep{Lordier2019}. Thanks to these studies, it is now known that alterations in FC may begin even before birth \citep{Thomason2017} and often last through adolescence \citep{Wehrle2018} into adult life \citep{Papini2016}. 
 
@@ -162,7 +162,7 @@ These initial approaches led to the discovery that some of these relationships a
 
 
 
-In an alternative method for brain network analysis, rs-fMRI can be seen in terms of graphs, where brain regions represent nodes and high correlation values represent edges \citep{Rubinov2010, Farahani2019}. The application of graph theory concepts in FC analysis reveals complex aspects of connectivity using graph parameters (e.g., nodal degrees, average path length, clustering coefficient, etc.) which complement traditional analysis methods. These metrics may then be used to shed light on the brain's ability to rapidly combine information from distributed regions, its resilience to external perturbations, among others.
+In an alternative method for brain network analysis, rs-fMRI can be seen in terms of graphs, where brain regions represent nodes and high correlation values represent edges \citep{Rubinov2010, Farahani2019}. The application of graph theory concepts in FC analysis reveals complex aspects of connectivity using graph parameters (\textit{e.g.}, nodal degrees, average path length, clustering coefficient, etc.) which complement traditional analysis methods. These metrics may then be used to shed light on the brain's ability to rapidly combine information from distributed regions, its resilience to external perturbations, among others.
 
 \subsection{A dynamic approach to fMRI analysis}
 
@@ -187,7 +187,7 @@ Similar to the resting state, activation time courses upon the execution of a ta
 
 \section{Preterm birth}\label{sub:preterm}
 
-A birth is defined as preterm (PT) when delivery occurs after less than 37 completed gestational weeks, in contrast to the expected duration of 40 weeks, on average, in a healthy pregnancy. This can be further characterised as a moderate to late PT (32---36 weeks), very PT (28---31 weeks),  or extremely PT ($\leq$ 27 weeks). These conditions have been associated with a wide range of behavioural, cognitive and neuropsychological difficulties that have been identified at various stages in life. In the sections below, I provide an overview of the challenges brought by preterm birth to the child, their family, and society as a whole. I then explain the problems preterm-born individuals are at higher risk of facing later in life, what has been found out to date, and identify a gap in the literature regarding investigations of dynamic brain function in this population, which this thesis aims to fill. 
+A birth is defined as preterm (PT) when delivery occurs after less than 37 completed gestational weeks, in contrast to the expected duration of 40 weeks, on average, in a healthy pregnancy. This can be further characterised as a moderate to late PT (32---36 weeks), very PT (28---31 weeks),  or extremely PT ($\leq$ 27 weeks). These conditions have been associated with a wide range of behavioural, cognitive and neuropsychological difficulties that have been identified at various stages in life. In the sections below, I provide an overview of the challenges brought by preterm birth to the child, their family, and society as a whole. I then explain the problems preterm-born individuals are at higher risk of facing later in life, the body of knowledge that has been build to date around the neural mechanisms for their clinical problems, and identify a gap in the literature regarding investigations of dynamic brain function in this population, which this thesis aims to fill. 
 
 
 \subsection{The global challenge of prematurity}
@@ -317,4 +317,4 @@ Using them might thus reduce the accuracy of any quantitative analysis and gener
 While several volumetric atlases have been proposed \citep{Habas2010, Kazemi2007, Shi2014}, no approach has been widely agreed upon since most obscure important spatial relationships among nearby locations in the cortex by blurring key structures, potentially leading to less accurate results \citep{Li2016}. 
 Until spatial locations are well defined in the infant brain, analytical methods that do not rely on atlasing are more suitable for this population. For the young adolescents whose data were analysed in this thesis, we used a Montreal Neuroimaging Institute (MNI) template based on adult brains, as this has been consistently and successfully used in children above 7 years old  \citep{ASHBURNER1998, Burgund2002}. 
 
-Finally, a recent review by \citet{Smid2016} has highlighted that, although most of the global preterm birth disease burden is on the shoulders of low and middle income countries (LMICs), only a very limited amount of research evidence for its prevention or treatment comes from studies in these settings. Instead, most of the research available on this population comes from high income countries and may thus not reflect the global issue of preterm birth --– even the data collected for and analysed in this thesis may fall in this category. Primary research involving LMICs thus remains urgently needed. 
+Finally, a recent review by \citet{Smid2016} has highlighted that, although most of the global preterm birth disease burden is on the shoulders of low and middle income countries (LMICs), only a very limited amount of research evidence for its prevention or treatment comes from studies in these settings. Instead, most of the research available on this population comes from high income countries and may thus offer an incomplete view of the global issue of preterm birth. Primary research involving LMICs thus also remains urgently needed. Nonetheless, research carried out in developed countries such as this one may still bring us closer to the development of interventions for which the need for expensive equipment will prove less essential, and LMIC populations will also benefit from them.  
