--- a/main/ch5_PPI_CAPs.tex
+++ b/main/ch5_PPI_CAPs.tex
@@ -50,7 +50,7 @@ Dynamic Conditional Correlation (DCC;  \citeauthor{Lindquist2014}, \citeyear{Lin
 
 Another category of analyses follows a framewise approach. Good examples of these are point process analysis (PPA)-based methods \citep{Tagliazucchi2012}, which select a subset of frames where a chosen seed is highly active and proceed from there. \citet{Liu2013a} benefited from this to identify co-activation patterns (CAPs) by clustering the retained frames into groups of similar activation arrangements. Another way of performing an implicit selection of relevant information is through sparsity-driven detection of neuronal activation time points (through Sparse Paradigm Free Mapping; \citeauthor{CaballeroGaudes2011}, \citeyear{CaballeroGaudes2011}; \citeauthor{Petridou2013}, \citeyear{Petridou2013}) or moments of transient activity (innovation-driven CAPs; \citeauthor{Karahanoglu2015a}, \citeyear{Karahanoglu2015a}). All of these approaches have been mainly used to study resting-state data.
 
-Unsurprisingly, the dynamic nature of connectivity in the brain is also expressed in the presence of external stimulation or during task performance \citep{Gonzalez-Castillo2018}. The natural assumption is thus that certain brain areas interact differently during the course of a task experiment. Beta Series Correlations (BSC, \citeauthor{Rissman2004},\citeyear{Rissman2004}) analysis, for example, reveals the absolute FC between brain regions under different stages of task performance. Another reasonable expectation is that different regions may \textit{change} the way they interact with each other when performing different tasks. These can be studied using methods such as Effective Connectivity (EC) analyses to look into the influence one neural system has on another and how this relationship changes between task settings (which we will refer to as \textit{contexts} or \textit{conditions} in what follows). This can be done using methods as varied as regression models such as Psychophysiological Interaction (PPI) analysis \citep{Friston1997} and its generalizations \citep{McLaren2012}; differential equation models such as dynamic causal modelling \citep{Friston2003} and causal dynamic network modelling \citep{Cao2019};  structural equation modelling \citep{Zhuang2008}; and Granger causality \citep{Wen2013}. These approaches, however, do not explicitly reveal moment-to-moment interactions between experimental conditions and brain activity, but rather average over the duration of the task/rest epochs, which is probably too limiting as has been shown from high temporal resolution neuroimaging techniques \citep{Ploner2009, Zhang2012}. As a natural development from these, window-based approaches to compute time-varying networks have been used to capture changes in task-related functional connectivity \citep{Di2015,Baczkowski2017, Ge2019}, although this also comes with known disadvantages as discussed above. Recent studies (e.g., \citeauthor{Fransson2018}, \citeyear{Fransson2018}) have steered away from windowed correlations, but there is still a great need for novel techniques to study how tasks modulate moment-to-moment connectivity at high temporal resolution.
+Unsurprisingly, the dynamic nature of connectivity in the brain is also expressed in the presence of external stimulation or during task performance \citep{Gonzalez-Castillo2018}. The natural assumption is thus that certain brain areas interact differently during the course of a task experiment. Beta Series Correlations (BSC, \citeauthor{Rissman2004},\citeyear{Rissman2004}) analysis, for example, reveals the absolute FC between brain regions under different stages of task performance. Another reasonable expectation is that different regions may \textit{change} the way they interact with each other when performing different tasks. These can be studied using methods such as Effective Connectivity (EC) analyses to look into the influence one neural system has on another and how this relationship changes between task settings (which we will refer to as \textit{contexts} or \textit{conditions} in what follows). This can be done using methods as varied as regression models such as Psychophysiological Interaction (PPI) analysis \citep{Friston1997} and its generalizations \citep{McLaren2012}; differential equation models such as dynamic causal modelling \citep{Friston2003} and causal dynamic network modelling \citep{Cao2019};  structural equation modelling \citep{Zhuang2008}; and Granger causality \citep{Wen2013}. These approaches, however, do not explicitly reveal moment-to-moment interactions between experimental conditions and brain activity, but rather average over the duration of the task/rest epochs, which is probably too limiting as has been shown from high temporal resolution neuroimaging techniques \citep{Ploner2009, Zhang2012}. As a natural development from these, window-based approaches to compute time-varying networks have been used to capture changes in task-related functional connectivity \citep{Di2015,Baczkowski2017, Ge2019}, although this also comes with known disadvantages as discussed above. Recent studies (\textit{e.g.}, \citeauthor{Fransson2018}, \citeyear{Fransson2018}) have steered away from windowed correlations, but there is still a great need for novel techniques to study how tasks modulate moment-to-moment connectivity at high temporal resolution.
 
 
 Here, we introduce psychophysiological interaction of co-activation patterns (PPI-CAPs) as a novel seed-based approach to investigate time-resolved effective connectivity. Our aim was to create a method that reveals the modulation of moment-to-moment connectivity between brain regions under a specific context or during performance of a task. To illustrate our framework, we applied PPI-CAPs to an fMRI dataset where subjects were exposed to a naturalistic paradigm by watching a short episode of a TV program containing two types of scenes (conditions). Our method dissected the connectivity patterns elicited by subjects across time, and found several PPI-CAPs with at least one of three possible effects: 1) a seed effect, indicating that the pattern was highly correlated with the seed activity in general; 2) a condition effect, meaning that the pattern in question was significantly more elicited during one of the types of scenes than during the other one; and 3) an interaction effect, representing an interaction between condition and the relationship of that co-activation pattern with the seed. Additionally, we shed light on the consistency in effective connectivity patterns across subjects and time, allowing to uncover links between PPI-CAPs and specific movie cues. Overall, our approach contributes to the state-of-the-art by unraveling time-resolved, relevant information on brain dynamics during task performance that cannot be captured by other methods. 
@@ -69,14 +69,14 @@ We first provide a global overview of the PPI-CAPs analysis pipeline (see Figure
 \centering
 \includegraphics[width=0.95\textwidth]{Ch5/20190927_PPICAPS_Frameworkc}
 %\vspace*{-1mm}
-\caption{\textbf{The PPI-CAPs analysis pipeline.} A)~We begin with an experimental design containing different task blocks or contexts. Here, we used data acquired in a naturalistic paradigm in which subjects watched a film containing two main types of scenes: \textit{fun} and \textit{science}. B)~For each subject, the z-scored signal from a selected seed is thresholded so that frames in which it is highly active or deactive (darkened in the subject time course) can be considered for further analysis. Orange and blue frames occur during \textit{fun} and \textit{science} scenes, respectively. C)~Suprathreshold frames from all subjects are concatenated. From here on, we can proceed to a static or a dynamic analysis. D)~Static analysis: suprathreshold frames from each condition are multiplied by the sign of the seed and task time courses (which corresponds to the PPI time course) and then averaged, yielding a proxy of the PPI analysis results: the static interaction map, or siMap, at either subject or group level.  E)~Dynamic analysis: suprathreshold frames from all subjects are clustered into a set of PPI-CAPs. Frame labels allow us to count how often a PPI-CAP occurs in each condition in its positive or negative polarity and compare these to the signs of each effect of interest. F)~The frames' polarity after clustering tends to correlate with the sign of the effects it represents. By examining the confusion matrix for each effect (seed, task or PPI), we can determine if a PPI-CAP is strongly related to it (i.e., when the confusion matrix is highly diagonal) or when there is no such effect (i.e., when the confusion matrix has no obvious pattern). }
+\caption{\textbf{The PPI-CAPs analysis pipeline.} A)~We begin with an experimental design containing different task blocks or contexts. Here, we used data acquired in a naturalistic paradigm in which subjects watched a film containing two main types of scenes: \textit{fun} and \textit{science}. B)~For each subject, the z-scored signal from a selected seed is thresholded so that frames in which it is highly active or deactive (darkened in the subject time course) can be considered for further analysis. Orange and blue frames occur during \textit{fun} and \textit{science} scenes, respectively. C)~Suprathreshold frames from all subjects are concatenated. From here on, we can proceed to a static or a dynamic analysis. D)~Static analysis: suprathreshold frames from each condition are multiplied by the sign of the seed and task time courses (which corresponds to the PPI time course) and then averaged, yielding a proxy of the PPI analysis results: the static interaction map, or siMap, at either subject or group level.  E)~Dynamic analysis: suprathreshold frames from all subjects are clustered into a set of PPI-CAPs. Frame labels allow us to count how often a PPI-CAP occurs in each condition in its positive or negative polarity and compare these to the signs of each effect of interest. F)~The frames' polarity after clustering tends to correlate with the sign of the effects it represents. By examining the confusion matrix for each effect (seed, task or PPI), we can determine if a PPI-CAP is strongly related to it (\textit{i.e.}, when the confusion matrix is highly diagonal) or when there is no such effect (\textit{i.e.}, when the confusion matrix has no obvious pattern). }
 \label{PPI_CAPs_fw}
 \end{figure*}
 
 
-For the static analysis, we first multiply the selected frames by the sign of the seed and the centred modulating term (i.e., the contrast variable, as it encodes knowledge of the task paradigm) at the corresponding time points. Note that this sequence is equivalent to multiplying the original selected frames by the PPI variable, which corresponds to the multiplication of the sign of the seed and the task time courses. The average of these selected frames leads to a proxy of the conventional PPI results (Figure~\ref{PPI_CAPs_fw}D, bottom), which we refer to as the \textit{static interaction map} (siMap). For a mathematical motivation as well as a toy example that intuitively illustrates this relationship between conventional PPI and static PPI-CAP analyses, we refer to Appendix \ref{appA} and Supplementary Figure~\ref{fig:simapIntuition}, respectively.
+For the static analysis, we first multiply the selected frames by the sign of the seed and the centred modulating term (\textit{i.e.}, the contrast variable, as it encodes knowledge of the task paradigm) at the corresponding time points. Note that this sequence is equivalent to multiplying the original selected frames by the PPI variable, which corresponds to the multiplication of the sign of the seed and the task time courses. The average of these selected frames leads to a proxy of the conventional PPI results (Figure~\ref{PPI_CAPs_fw}D, bottom), which we refer to as the \textit{static interaction map} (siMap). For a mathematical motivation as well as a toy example that intuitively illustrates this relationship between conventional PPI and static PPI-CAP analyses, we refer to Appendix \ref{appA} and Supplementary Figure~\ref{fig:simapIntuition}, respectively.
 
-For the dynamic analysis, all the originally retained frames are subjected to K-means++ clustering  \citep{Arthur2007} as described in Section \ref{sectionKmeans} (Figure~\ref{PPI_CAPs_fw}E). This step yields PPI-CAPs, their occurrence in time and the polarity of their constituting frames, which allows us to eventually identify meaningful statistics (i.e., effects of task, seed, or their interaction). The next sections further detail the different steps of the pipeline.
+For the dynamic analysis, all the originally retained frames are subjected to K-means++ clustering  \citep{Arthur2007} as described in Section \ref{sectionKmeans} (Figure~\ref{PPI_CAPs_fw}E). This step yields PPI-CAPs, their occurrence in time and the polarity of their constituting frames, which allows us to eventually identify meaningful statistics (\textit{i.e.}, effects of task, seed, or their interaction). The next sections further detail the different steps of the pipeline.
 
 \subsubsection{Seed-based frame selection}
 
@@ -88,9 +88,9 @@ In the context of point process analyses \citep{Tagliazucchi2012,Liu2013}, simpl
 In a similar validation step, we perform an initial static analysis procedure that can be compared against conventional PPI. Specifically, suprathreshold frames were multiplied by a centred contrast variable---the sign of the PPI regressor, as explained in Section~\ref{sec:methods-ppi-caps}---and subsequently averaged (Figure~\ref{PPI_CAPs_fw}D, yellow inset). Here, we used the strategy described in \citet{Liu2013} to improve the signal-to-noise ratio of an fMRI frame, where a mask was created to cover voxels with the highest 10\% and lowest 5\% values, and all other voxels were set to zero. The spatial correlation between the resulting static interaction map (siMap) and the PPI results is measured using spatial Pearson’s correlation coefficient. This correlation was repeatedly calculated for siMaps including 5\textendash100\% of all frames both at subject and group levels, to test the robustness of the method to the choice of threshold. Since correlation values are range-constrained, when calculating their averages as described in Section \ref{sec:static_analysis} and shown in Figure~\ref{fig:PPI_CAPs_Fig2}C we first applied Fisher's z transform (the inverse hyperbolic tangent) to all Pearson's r values \citep{Cox2008}. After calculating the means, we then converted the results back to Pearson's r values by calculating the former's hyperbolic tangent. For the group maps, z-scored seed activations were calculated for all subjects, whose data were concatenated and frames selected as per individual subjects.    The PPI analysis was performed using the standard procedure from  SPM8 where three regressors are included in a general linear model design, relating to the time courses of the PPI, the seed, and the task, respectively. Note that the PPI regressor in SPM is derived by deconvolving the haemodynamic response function (HRF) from the seed time course, multiplying the latter by the task time course, and then reconvolving the final series with the HRF. The exact same task time course and seed region were used for both analyses.
 
 \subsubsection{Dynamic analysis} \label{sectionKmeans}
-For a dynamic analysis of brain function during task, we identify the PPI-CAPs that may present a seed, task, or interaction effect (Figure~\ref{PPI_CAPs_fw}E). To this end, we applied  K-means++ clustering on the suprathreshold frames of all subjects, using a \textit{modulo-$\pi$} cosine distance as a similarity measure, which we have named as such because it consists in the following: frames among which only the signs of the voxels were reversed were considered to be representations of the same pattern, with opposite polarity (e.g., if frame \textit{a} showed an active prefrontal cortex and deactive occipital cortex, while frame \textit{b} displayed a deactive prefrontal cortex and active occipital cortex, then, assuming {$\mathbf{F}_a$} and {$\mathbf{F}_b$} are the frames' voxel patterns, {$\mathbf{F}_a$} $\approx$ -{$\mathbf{F}_b$}). 
+For a dynamic analysis of brain function during task, we identify the PPI-CAPs that may present a seed, task, or interaction effect (Figure~\ref{PPI_CAPs_fw}E). To this end, we applied  K-means++ clustering on the suprathreshold frames of all subjects, using a \textit{modulo-$\pi$} cosine distance as a similarity measure, which we have named as such because it consists in the following: frames among which only the signs of the voxels were reversed were considered to be representations of the same pattern, with opposite polarity (\textit{e.g.}, if frame \textit{a} showed an active prefrontal cortex and deactive occipital cortex, while frame \textit{b} displayed a deactive prefrontal cortex and active occipital cortex, then, assuming {$\mathbf{F}_a$} and {$\mathbf{F}_b$} are the frames' voxel patterns, {$\mathbf{F}_a$} $\approx$ -{$\mathbf{F}_b$}). 
 
-Traditionally, the iterative algorithm to implement K-means consists of two steps: 1) assigning each data point to its closest centroid given the defined similarity metric \textit{d}; 2) updating the centroids according to their assigned data points (e.g., by updating each centroid with the average of the normalized data points most recently assigned to it). At each iteration, the cluster label assigned to the $i^{th}$ frame, $\mathbf{L}_i$, is given by:
+Traditionally, the iterative algorithm to implement K-means consists of two steps: 1) assigning each data point to its closest centroid given the defined similarity metric \textit{d}; 2) updating the centroids according to their assigned data points (\textit{e.g}., by updating each centroid with the average of the normalized data points most recently assigned to it). At each iteration, the cluster label assigned to the $i^{th}$ frame, $\mathbf{L}_i$, is given by:
  \begin{equation} \label{eq:labelassigment}
  \mathbf{L}_i = \argmin_{\kappa} \big( \text{d}( \mathbf{C}_\kappa, \mathbf{F}_i )  \big)\text{,}
  \end{equation}
@@ -128,7 +128,7 @@ Effective Connectivity methods such as PPI provide a summary spatial map of task
 
 Additionally, for every $k = {3,4,...,8}$ we calculated the number of frames from each subject that contributed to each of the $k$ PPI-CAPs.
 This helped us choose a $k$ value for which the distribution of PPI-CAPs across subjects was roughly uniform. We applied consensus clustering for $k = {3,4,...,8}$ using 10 random subsamples for every $k$. Each subsample included 80\,\% of the suprathreshold frames of all subjects, and K-means was computed for 50 random initialisations for each subsample.
-To obtain the final clustering result, we applied K-means clustering with the optimum $k$ on 100\,\% of the suprathreshold frames and kept the best result from 50  random initialisations, i.e., the one that minimised the total sum of modulo-$\pi$ cosine distances between frames and centroids.
+To obtain the final clustering result, we applied K-means clustering with the optimum $k$ on 100\,\% of the suprathreshold frames and kept the best result from 50  random initialisations, \textit{i.e.}, the one that minimised the total sum of modulo-$\pi$ cosine distances between frames and centroids.
 
 \subsubsection{Experimental data}
 
@@ -171,7 +171,7 @@ Together, these results demonstrate that even a subset of fMRI frames, selected 
 
 \subsubsection{Dynamic analysis} 
 
-\paragraph{Choice of number of clusters} An analysis of PPI-CAP occurrences for  $k={3,4,...,8}$ showed that for $k\geq 6$, some patterns never occurred in some subjects, while $k=4$ and $k=5$ were the cases with the most homogeneous distribution of pattern occurrence per subject (see Supplementary Fig.~\ref{fig:consensus}). Visual inspection of the consensus matrices showed that the most stable values for $k$ (i.e., the values for which any two frames would most consistently be clustered together or separately) were $k=3$ and $k=4$. Taking these observations together, we proceeded with the analysis generating 4 clusters, as this $k$ value combined the beneficial features of: 1) yielding PPI-CAPs that are homogeneously distributed across subjects; 2) being highly stable (i.e., running the clustering several times would always produce similar results); and 3) representing a reasonable balance between variety and redundancy \citep{Liu2013}.
+\paragraph{Choice of number of clusters} An analysis of PPI-CAP occurrences for  $k={3,4,...,8}$ showed that for $k\geq 6$, some patterns never occurred in some subjects, while $k=4$ and $k=5$ were the cases with the most homogeneous distribution of pattern occurrence per subject (see Supplementary Fig.~\ref{fig:consensus}). Visual inspection of the consensus matrices showed that the most stable values for $k$ (\textit{i.e.}, the values for which any two frames would most consistently be clustered together or separately) were $k=3$ and $k=4$. Taking these observations together, we proceeded with the analysis generating 4 clusters, as this $k$ value combined the beneficial features of: 1) yielding PPI-CAPs that are homogeneously distributed across subjects; 2) being highly stable (\textit{i.e.}, running the clustering several times would always produce similar results); and 3) representing a reasonable balance between variety and redundancy \citep{Liu2013}.
 
 
 
@@ -189,8 +189,8 @@ PPI-CAP\textsubscript{1} includes nodes of the visuospatial (VSN) and attention 
 
 
 
-\paragraph{Consistency of PPI-CAPs across subjects and brain activity decoding} Our time-resolved method allowed us to investigate how consistent each PPI-CAP was across subjects and throughout the experiment. Figure~\ref{fig:PPI_CAPs_Fig4} illustrates this analysis for PPI-CAP\textsubscript{4}. By inspecting moments when the PPI-CAP appeared consistently for several subjects, we were able to identify specific video frames that elicited the co-activation pattern. For PPI-CAP\textsubscript{4},  moments of positive activation, that is, moments when the V5 and visuospatial network were more active, corresponded to scenes in which there was high motion (e.g., a group of children playing football), whereas a negative polarity of this pattern was related to moments of stillness (Figure~\ref{fig:PPI_CAPs_Fig4}).
-Supplementary Figure \ref{fig:PPI_CAPs_Fig5} shows these results for all four PPI-CAPS: for PPI-CAP\textsubscript{1}, moments of positive polarity corresponded to scenes in which the main object (or character) was zoomed into and movements were slow, whereas a negative polarity (meaning a negative VSN and AN, with activated FPN and SN) was related to moments when some goal-oriented action was being performed. For example, at 1'38'', while a group of children are sat at the beach, one of the girls is clearly reaching out for sand to build her castle.   PPI-CAP\textsubscript{2} seemed to be more strongly active during moments when there are lots of people on the scene, and more consistently negative (i.e., deactivated FPN and activated posterior insula) when the scene changes to only one person on screen, explaining concepts about the danger of sun exposure. PPI-CAP\textsubscript{3} appeared more with a positive polarity during zoomed-out scenes where many people were present and interacting, or when science concepts had been explained for a while in the laboratory scenario. These results illustrate PPI-CAPs' ability to link a pattern's occurrence to specific moments of the experimental paradigm.
+\paragraph{Consistency of PPI-CAPs across subjects and brain activity decoding} Our time-resolved method allowed us to investigate how consistent each PPI-CAP was across subjects and throughout the experiment. Figure~\ref{fig:PPI_CAPs_Fig4} illustrates this analysis for PPI-CAP\textsubscript{4}. By inspecting moments when the PPI-CAP appeared consistently for several subjects, we were able to identify specific video frames that elicited the co-activation pattern. For PPI-CAP\textsubscript{4},  moments of positive activation, that is, moments when the V5 and visuospatial network were more active, corresponded to scenes in which there was high motion (\textit{e.g.}, a group of children playing football), whereas a negative polarity of this pattern was related to moments of stillness (Figure~\ref{fig:PPI_CAPs_Fig4}).
+Supplementary Figure \ref{fig:PPI_CAPs_Fig5} shows these results for all four PPI-CAPS: for PPI-CAP\textsubscript{1}, moments of positive polarity corresponded to scenes in which the main object (or character) was zoomed into and movements were slow, whereas a negative polarity (meaning a negative VSN and AN, with activated FPN and SN) was related to moments when some goal-oriented action was being performed. For example, at 1'38'', while a group of children are sat at the beach, one of the girls is clearly reaching out for sand to build her castle.   PPI-CAP\textsubscript{2} seemed to be more strongly active during moments when there are lots of people on the scene, and more consistently negative (\textit{i.e.}, deactivated FPN and activated posterior insula) when the scene changes to only one person on screen, explaining concepts about the danger of sun exposure. PPI-CAP\textsubscript{3} appeared more with a positive polarity during zoomed-out scenes where many people were present and interacting, or when science concepts had been explained for a while in the laboratory scenario. These results illustrate PPI-CAPs' ability to link a pattern's occurrence to specific moments of the experimental paradigm.
 
 
 \begin{figure*}[h!]
@@ -219,10 +219,10 @@ In this work, we brought   the advantages of these two methodologies together to
 
 Beyond this initial equivalence as a first sanity check of the approach, we showed that functional brain connectivity across task conditions could be disentangled into a set of distinct building blocks, the PPI-CAPs, in analogy to the resting-state CAP methodology \citep{Liu2013,Liu2018}. Whereas a traditional PPI map reflects, \textit{on average}, the functional seed interplays that differ across task conditions, PPI-CAPs break this information down into separate seed co-activation patterns with their own spatiotemporal features. In addition, our approach also extends the information provided by traditional CAPs by capturing interaction effects between the task and the relationship of a co-activation pattern with the seed.
 
-Of note is the fact that the retrieved PPI-CAPs that do not show a context or PPI effect highlight shared functions between task settings, thus displaying common temporal expression features (i.e., similar occurrence levels across conditions). Statistically probing for a context effect enables, then, to distinguish these from co-activation patterns that are indeed task-modulated. This information cannot be obtained from previous PPI approaches. Further, extracting PPI-CAPs also enables the analyst to overcome the caveats arising from multiple comparisons that plague PPI analysis. This is because rather than mass univariate testing, K-means++ clustering (a multivariate, unsupervised technique) is performed to establish characteristic activation patterns, and only then followed by statistical testing on a much lower dimensional space.
+Of note is the fact that the retrieved PPI-CAPs that do not show a context or PPI effect highlight shared functions between task settings, thus displaying common temporal expression features (\textit{i.e.}, similar occurrence levels across conditions). Statistically probing for a context effect enables, then, to distinguish these from co-activation patterns that are indeed task-modulated. This information cannot be obtained from previous PPI approaches. Further, extracting PPI-CAPs also enables the analyst to overcome the caveats arising from multiple comparisons that plague PPI analysis. This is because rather than mass univariate testing, K-means++ clustering (a multivariate, unsupervised technique) is performed to establish characteristic activation patterns, and only then followed by statistical testing on a much lower dimensional space.
 
 
-Our methodological pipeline also yields polarity labels for each frame that contributes to a PPI-CAP, revealing moments among which a certain pattern has opposite signs---that is, regions that are highly activated in a frame labelled as ``positive" will be deactivated in a ``negative" frame of that PPI-CAP, and vice-versa. Since a given pattern may contain activated and deactivated voxels simultaneously, this also provides subregion-specific information on their relationship with the seed, task, or both, at any point in time. For instance, for a PPI-CAP whose frames' polarities correlate with the polarity of the seed (i.e., the confusion matrix with the seed is clearly diagonal), both jointly show their strongest signal values at the same time in all positively labelled frames. Accordingly, areas that appear in blue on that same PPI-CAP represent areas of seed-to-voxel anti-correlation when frames are labelled as positive, and vice-versa. Conversely, when a PPI-CAP has, for instance, a seed effect with the corresponding confusion matrix's pattern being anti-diagonal, we know that voxels depicted as red are, in fact, discordant with the seed at time points when a negative frame appears. This is why the interpretation of a PPI-CAP requires both the visualization of the co-activation map and the confusion matrix that shows how the polarity labels of its contributing frames relate to each effect's time course.  
+Our methodological pipeline also yields polarity labels for each frame that contributes to a PPI-CAP, revealing moments among which a certain pattern has opposite signs---that is, regions that are highly activated in a frame labelled as ``positive" will be deactivated in a ``negative" frame of that PPI-CAP, and vice-versa. Since a given pattern may contain activated and deactivated voxels simultaneously, this also provides subregion-specific information on their relationship with the seed, task, or both, at any point in time. For instance, for a PPI-CAP whose frames' polarities correlate with the polarity of the seed (\textit{i.e.}, the confusion matrix with the seed is clearly diagonal), both jointly show their strongest signal values at the same time in all positively labelled frames. Accordingly, areas that appear in blue on that same PPI-CAP represent areas of seed-to-voxel anti-correlation when frames are labelled as positive, and vice-versa. Conversely, when a PPI-CAP has, for instance, a seed effect with the corresponding confusion matrix's pattern being anti-diagonal, we know that voxels depicted as red are, in fact, discordant with the seed at time points when a negative frame appears. This is why the interpretation of a PPI-CAP requires both the visualization of the co-activation map and the confusion matrix that shows how the polarity labels of its contributing frames relate to each effect's time course.  
 
 In the current version of our method the appearance of a PPI-CAP is defined only by averaging constituting frames, whose labels were assigned automatically during the clustering step. Since the first centroid initialization is made at random by K-means++ clustering, the polarity labels and, consequently, the pattern of the PPI-CAP they constitute, may be inverted in different runs. If preferred, this could be changed as a post-processing step so that, if desired, the default pattern would be the one with the largest polarity. For example, if a PPI-CAP is made up mainly of negative frames, its flipped version could become the default (meaning that the voxels that currently appear in the pattern as deactive would be shown as active). In this case, the frame polarity labels would therefore be updated for their distribution to be correctly represented in the plots. Alternatively, polarity labels (as well as the pattern formed by the corresponding frames) could be arranged to default to the arrangement that favours a diagonal confusion matrix with the seed, to facilitate the interpretation of voxels in red or blue in relation to that region when there is a seed effect. Yet another option would be for the appearance of a PPI-CAP to default to the one that contains the most activated voxels (with frame labels being updated when necessary). Note, however, that none of these choices affects the interpretation of the results, as switching the labels will also invert the appearance of the PPI-CAP when it is updated as per Equation \ref{eq:centroid}, so in the end the conclusions are unchanged; these suggestions are merely for visualization purposes.   
 
