--- a/main/ch6_FuturePerspectives.tex
+++ b/main/ch6_FuturePerspectives.tex
@@ -4,17 +4,14 @@ This work explored the dynamic features of brain function in young adolescents a
 
 \section{Summary of findings}
 
-\textbf{Resting-state brain dynamics in preterm-born young adolescents:} We investigated, for the first time, the development of blood oxygenation level dependent (BOLD) signal variability and co-activation patterns (CAPs) in young adolescents born prematurely as compared to fullterm-born controls. To address the issue of high dimensionality in voxelwise BOLD variability maps, we employed a partial least squares correlation (PLSC) approach to identify multivariate patterns of alterations across groups and how they relate to age at assessment, gestational age and an interaction between the two. We used a similar PLSC approach to identify differences in CAP expression between the groups and their relationship with the aforementioned environmental variables. Through this approach, we discovered that the development of BOLD signal variability is indeed altered in the preterm group in a broad pattern distributed across several areas of the brain, but especially in the bilateral hipoccampi and salience network including bilateral insulae and anterior cingulate cortex (ACC). Since the ACC has been recently identified in other studies as having altered connectivity in preterm-born individuals, we investigated this region further by performing an ACC-based CAPs analysis to uncover dynamic functional connectivity patterns that arise across age. Similarly to the BOLD variability analysis, we found different trajectories of CAP development in both groups.  Indeed, the change in the balance between  internally- and externally-oriented networks across age is more accentuated in the preterm group. Taken together, our observations suggest that the preterm-born brain triggers neurological compensation mechanisms that start during the highly dynamic age range of early adolescence and fail to find an optimal balance.
+\textbf{Resting-state brain dynamics in preterm-born young adolescents:} We investigated, for the first time, the development of blood oxygenation level dependent (BOLD) signal variability and co-activation patterns (CAPs) in young adolescents born prematurely as compared to fullterm-born controls. To address the issue of high dimensionality in voxelwise BOLD variability maps, we employed a partial least squares correlation (PLSC) approach to identify multivariate patterns of alterations across groups and how they relate to life course measures, namely age at assessment; gestational age; and an interaction between the two. We used a similar PLSC approach to identify differences in CAP expression between the groups and their relationship with the aforementioned life course variables. Through this approach, we discovered that the development of BOLD signal variability is indeed altered in the preterm group in a broad pattern distributed across several areas of the brain, but especially in the bilateral hipoccampi and salience network including bilateral insulae and anterior cingulate cortex (ACC). Since the ACC has been recently identified in other studies as having altered connectivity in preterm-born individuals, we investigated this region further by performing an ACC-based CAPs analysis to uncover dynamic functional connectivity patterns that arise across age. Similarly to the BOLD variability analysis, we found different trajectories of CAP development in both groups.  Indeed, the change in the balance between  internally- and externally-oriented networks across age is more accentuated in the preterm group. Taken together, our observations suggest that the preterm-born brain triggers neurological compensation mechanisms that start during the highly dynamic age range of early adolescence and fail to find an optimal balance.
 
 
-\textbf{Reality Filtering task processing in preterm-born young adolescents:} To test whether pre\-term-born young adolescents would be able to complete a task that relies on a particularly vulnerable region in this population, we performed a reality filtering experiment. By looking into how brain activation changed depending on the type of stimulus being shown and comparing the preterm and control groups, we found that despite being able to perform the task with comparable accuracy to the fullterm group, the levels of OFC activation in the preterm group are lower. Moreover, no other regions were significantly more activated in the preterm than in controls. This suggests that preterm-born individuals may have developed mechanisms to optimise OFC activity such that they are still able to perform the task without depending on the same level of activation as the control group.
-
-
-
+\textbf{Reality Filtering task processing in preterm-born young adolescents:} To test whether pre\-term-born young adolescents would be able to complete a task that relies on a particularly vulnerable region in this population (the orbitofrontal cortex, OFC), we performed a reality filtering experiment. By looking into how brain activation changed depending on the type of stimulus being shown and comparing the preterm and control groups, we found that despite being able to perform the task with comparable accuracy to the fullterm group, the levels of OFC activation in the preterm group are lower. Moreover, no other regions were significantly more activated in the preterm than in controls. This suggests that preterm-born individuals may have developed mechanisms to optimise OFC activity such that they are still able to perform the task without depending on the same level of activation as the control group.
 
 
 \textbf{Time-resolved task-driven modulations of brain connectivity:}
-We thus proceeded to investigate how brain organisation changes over time as a result of task performance in the preterm population. Given their higher risk of attentional and socio-emotional deficits, we elaborated a task that includes a movie watching aspect and an emotion regulation one. To explore this rich data set we first developed a method to recover time-resolved co-activation patterns (PPI-CAPs) and analyse their relationships with the seed, task, or an interaction with the two. We initially validate this framework in an adult data set. Once the methodology was stable, we applied it on he preterm data and extended the method to allow group comparisons. Here, we identified a series of dorsal anterior cingulate cortex (ACC)-based co-activation patterns that vary differently in preterms and controls according to the task. Interestingly, a new pattern including the limbic network emerged from this data which had not been found in the CAP analysis from Chapter \ref{chapter:ch3}, which was based on resting-state data. This is in line with existing evidence that the limbic network is involved in emotion processing. Together, these results highlight the relevance of studying brain dynamics in clinical populations. The code developed to perform the analysis described in this work has been made available on \url{https://github.com/lorenafreitas/PPI_CAPs}
+We thus proceeded to investigate how brain organisation changes over time as a result of task performance in the preterm population. Given their higher risk of attentional and socio-emotional deficits, we elaborated a task that includes a movie watching aspect and an emotion regulation one. To explore this rich data set we first developed a time-resolved method to recover task-driven co-activation patterns (PPI-CAPs) and analyse their relationships with the seed, task, or an interaction between the two. We initially validate this framework in an adult data set. Once the methodology was stable, we applied it to the preterm data and extended the method to allow group comparisons. Here, we identified a series of dorsal anterior cingulate cortex (ACC)-based co-activation patterns that vary differently in preterms and controls according to the task. Interestingly, a new pattern including the limbic network emerged from this data which had not been found in the CAP analysis from Chapter \ref{chapter:ch3}, which was based on resting-state data. This is in line with existing evidence that the limbic network is involved in emotion processing. Together, these results highlight the relevance of studying brain dynamics in clinical populations. The code developed to perform the analysis described in this work has been made available on \url{https://github.com/lorenafreitas/PPI_CAPs}
 
 
 
@@ -28,28 +25,28 @@ We thus proceeded to investigate how brain organisation changes over time as a r
 
 
 \subsection*{Linking dynamic brain function and clinical outcomes}
-The studies presented in this thesis characterise the dynamic features of brain function in preterm-born young adolescents and how they compare to fullterm-born individuals at his age. Several of these involve areas known to be part of high-order functional networks (see, for example, chapter \ref{chapter:ch3}). An interesting follow-up will thus be to see how the markers unveiled here relate to clinical outcomes such as attention levels, working memory, executive functions, etc. In fact, this data is available for the Building the Path to Resilience in Preterm-Born Infants project, of which this work is a constituting part. This would thus be a natural and feasible development for the near future.
+The studies presented in this thesis characterise dynamic features of brain function in preterm-born young adolescents and how they compare to fullterm-born individuals at his age. Several of these involve areas known to be part of high-order functional networks (see, for example, chapter \ref{chapter:ch3}). An interesting follow-up will thus be to see how the markers unveiled here relate to clinical outcomes such as attention levels, working memory, executive functions, etc. In fact, this data is available from the \textit{Building the Path to Resilience in Preterm-Born Infants} project, of which this work is a constituting part. This would thus be a natural and feasible development for the near future.
 
 \subsection*{Mindfulness meditation as a potential intervention in preterm young adolescents}
 
  Although interventions for premature babies have been routinely implemented with a positive effect on cognition and  motor abilities \citep{Ferreira2020}, so far there is no consensus regarding procedures applied at later stages in life. Socio-emotional and executive function skills are, however, still in plain development during childhood and adolescence, suggesting that this age may still be within the intervention window.
 
 
-Mindfulness meditation is a form of mind training to develop a reflective (as opposed to reflexive) way of responding to both internal or external events \citep{Bishop2004} that involves attention, attitude and intention. As \citep{Kabat-Zinn1994} describes it, it involves "paying attention (Attention) in a particular way (Attitude): on purpose (Intention), in the present moment, and non-judgmentally". Studies on its benefits for physical and mental health as well as its neurocognitive mechanisms have gained increased popularity in investigations involving adults, children and adolescents. In fact, even short sessions of meditation given to inexperienced participants have been deemed enough to improve attention levels \citet{Norris2018, Jankowski2020}. Moreover, regular practice has been shown to have long-term effects on attention \citep{Zanesco2018} and brain funtion. Benefits such as the ones described above have put meditation in the spotlight as a potential intervention in clinical practice \citep{Simkin2014,Zhang2018}.
+Mindfulness meditation is a form of mind training to develop a reflective (as opposed to reflexive) way of responding to both internal or external events \citep{Bishop2004} that involves attention, attitude and intention. As \citep{Kabat-Zinn1994} describes it, it involves "paying attention (Attention), in a particular way (Attitude), on purpose (Intention), in the present moment, and non-judgmentally". Studies on its benefits for physical and mental health as well as its neurocognitive mechanisms have gained increased popularity in investigations involving adults, children and adolescents. In fact, even short sessions of meditation given to inexperienced participants have been deemed enough to improve attention levels \citet{Norris2018, Jankowski2020}. Moreover, regular practice has been shown to have long-term effects on attention \citep{Zanesco2018} and brain funtion. Benefits such as the ones described above have put meditation in the spotlight as a potential intervention in clinical practice \citep{Simkin2014,Zhang2018}.
 
 In young populations, mindfulness meditation training has emerged as a potential tool to help manage a wide variety of symptoms including disruptive behaviour \citep{Perry-Parrish2016} and lack of attention \citep{Zhang2018}. A study involving typically developing children at 11 years old showed that 8 weeks of mindfulness training already has the potential to improve attentional self-regulation \citep{Felver2017}. Another, found that meditation programs can enhance cognitive and social-emotional development in young populations \citep{Schonert-Reichl2015}. Taken together, these results further suggest a link between these cognitive domains and that mindfulness meditation may be an avenue for intervention in clinical populations.
 
 
-The Building the Path to Resilience in Preterm-Born Infants project, of which this thesis is part, has acquired functional and structural MRI data from the preterm-born young adolescents studied here after 8 weeks of mindfulness training. Crucially, mindfulness has recently been found to relate to dynamic --- as opposed to static --- features of neural function and neural network interactions over time \citep{Marusak2018}. This highlights PPI-CAPs as a compelling avenue to explore the effects of mindfulness meditation as a potential intervention for young adolescents born prematurely, as its focus is precisely to uncover dynamic aspects of brain function during performance of a task.  
+The \textit{Building the Path to Resilience in Preterm-Born Infants} project, of which this thesis is part, has acquired functional and structural MRI data from the preterm-born young adolescents studied here after 8 weeks of mindfulness training. Crucially, mindfulness has recently been found to relate to dynamic --- as opposed to static --- features of neural function and neural network interactions over time \citep{Marusak2018}. This highlights PPI-CAPs as a compelling avenue to explore the effects of mindfulness meditation as a potential intervention for young adolescents born prematurely, as its focus is precisely to uncover dynamic aspects of brain function during performance of a task.  
 
 
 
 
 
 \subsection*{PPI-CAPs as markers for neurofeedback} 
-FMRI Neurofeedback (fMRI-NF) is a technique in which real-time information about someone's own brain activity is fed back to them, which gives them chance to attempt at controlling it. It has been found to be a promising means to reshape neural activity, and has been used as an intervention tool in several neurological and psychiatric disorders \citep{Guntensperger2017, Misaki2019} including in adolescent clinical populations \citep{Alegria2017}. Most relevant for this work is its potential for self-driven modulation of emotion processing domains, both in adult \citep{Koush2017,Lorenzetti2018} as well as children and adolescent populations \citep{CohenKadosh2016}. In most of these studies, a seed region is selected for which information on activation levels is provided to the user, who then tries to modulate that brain area's activity. 
+FMRI Neurofeedback (NF) is a technique in which real-time information about someone's own brain activity is fed back to them, which gives them  the chance to attempt to control it. It has been found to be a promising means to reshape neural activity, and has been used as an intervention tool in several neurological and psychiatric disorders \citep{Guntensperger2017, Misaki2019} including in adolescent clinical populations \citep{Alegria2017}. Most relevant for this work is its potential for self-driven modulation of emotion processing domains, both in adult \citep{Koush2017,Lorenzetti2018} as well as children and adolescent populations \citep{CohenKadosh2016}. In most of these studies, a seed region is selected for which information on activation levels is provided to the user, who then tries to modulate that brain area's activity. 
 
-Recently, \citet{Koush2017} showed that it is also possible to gain control over entire networks related to emotion regulation using a connectivity-neurofeedback approach. This opens a promising avenue for future research built on the basis of this thesis. In Chapter \ref{chapter:ch5}, we introduced Psychophysiological Interaction of Co-Activation Patterns (PPI-CAPs) as a seed-based method to investigate time-resolved changes in effective connectivity also in a task-based environment. With this method, we have investigated differences in dynamic brain function during the performance of a task in the preterm group as compared to fullterm-born controls. The very PPI-CAPs which are less elicited by the clinical population could potentially be used as an NF target in future studies. In this paradigm, an initial run could be performed to identify target PPI-CAPs --- that is, those which were most differently expressed between groups. Then, subsequent runs would be carried out where the subject's goal is to attempt to reproduce that pattern. It is important to note, however, that although fMRI-NF has been show to successfully modulate activation and connectivity in the brain, and to lead to behavioural changes, how this translates into clinically significant improvements remains largely debatable \citep{Thibault2018}.
+Recently, \citet{Koush2017} showed that it is also possible to gain control over entire networks related to emotion regulation using a connectivity-neurofeedback approach. This opens a promising avenue for future research built on the basis of this thesis. In Chapter \ref{chapter:ch5}, we introduced Psychophysiological Interaction of Co-Activation Patterns (PPI-CAPs) as a seed-based method to investigate time-resolved changes in effective connectivity also in a task-based environment. With this method, we have investigated differences in dynamic brain function during the performance of a task in the preterm group as compared to fullterm-born controls. The very PPI-CAPs which are less elicited by the clinical population could potentially be used as an NF target in future studies. In this paradigm, an initial run could be performed to identify target PPI-CAPs --- that is, those which were most differently expressed between groups. Then, subsequent runs would be carried out where the subject's goal is to attempt to reproduce that pattern. It is important to note, however, that although fMRI NF has been show to successfully modulate activation and connectivity in the brain, and to lead to behavioural changes, how this translates into clinically significant improvements remains debatable \citep{Thibault2018}.
 
 \subsection*{ Extensions for PPI-CAPs}
 
@@ -58,9 +55,9 @@ As described in more detail in section \ref{sec:extensions_ppicaps} of Chapter \
 One could thus apply the frame selection and clustering steps on these signals to yield \textit{innovation-driven} PPI-CAPs (or PPI-\textit{i}CAPs), which would represent spatial patterns of voxels whose signals \textit{transition} simultaneously. Backprojecting these would then recover their time courses, thus revealing moments when different combinations of those patterns may overlap.   
 
 
-Another attractive route for extension would be to consider the introduction of temporal relationships between successive time points. This has been shown to be a promising avenue both when considering sequential \citep{Eavani2013,Chen2016, Vidaurre2017} or overlapping \citep{Sourty2016, Bolton2018a} brain states. In the case of the present work, given that the results from Chapter \ref{chapter:ch5}.1 which revealed default mode network (PPI-CAP\textsubscript{3}), fronto-parietal network (PPI-CAP\textsubscript{1} and PPI-CAP\textsubscript{2}) and salience network (PPI-CAP\textsubscript{2}) contributions during movie-watching, causal interplays between these networks could be assessed in the context of the so-called triple network model \citep{Menon2011}. 
+Another attractive route for extension would be to consider the introduction of temporal relationships between successive time points. This has been shown to be a promising avenue both when considering sequential \citep{Eavani2013,Chen2016, Vidaurre2017} or overlapping \citep{Sourty2016, Bolton2018a} brain states. For instance in the case of the present work, given that the results from Chapter \ref{chapter:ch5}.1 which revealed default mode network (PPI-CAP\textsubscript{3}), fronto-parietal network (PPI-CAP\textsubscript{1} and PPI-CAP\textsubscript{2}) and salience network (PPI-CAP\textsubscript{2}) contributions during movie-watching, causal interplays between these networks could be assessed in the context of the so-called triple network model \citep{Menon2011}. 
 
-So far, PPI-CAPs address temporal dynamics alone, without taking into consideration how to optimally tackle the spatial dimension of the data. One extension could thus to inject a spatial prior in deriving PPI-CAPs \citep{Zhuang2018}, or to study the spatial variability of task-related functional activity patterns in more detail \citep{Kiviniemi2011}. This could be achieved by separately considering, for each PPI-CAP, the pools of frames linked to given task contexts, and carrying out statistical comparisons at this level \citep{Amico2014}. 
+So far, PPI-CAPs address temporal dynamics alone, without taking into consideration how to optimally tackle the spatial dimension of the data. One extension could thus be to inject a spatial prior in deriving PPI-CAPs \citep{Zhuang2018}, or to study the spatial variability of task-related functional activity patterns in more detail \citep{Kiviniemi2011}. This could be achieved by separately considering, for each PPI-CAP, the pools of frames linked to given task contexts, and carrying out statistical comparisons at this level \citep{Amico2014}. 
 
 
 Finally, one could investigate measures that are more sophisticated than pure occurrences as features of interest \citep{Chen2015, Bolton2020}, or broaden the analysis of PPI-CAPs to a meta-state perspective \citep{Miller2016,Vidaurre2017}, where a meta-state would symbolise a particular combination of expression and polarity of the investigated patterns.
@@ -78,7 +75,7 @@ To the best of our knowledge, graph analyses on preterm-born populations to date
 
 
 \subsection*{A note on addressing the global challenge of prematurity} 
-An important issue in the study of the neurodevelopmental effects of preterm birth is that, although most of the global burden of preterm birth is shouldered by low- and middle-income countries (LMICs), only a tiny portion of the currently available research evidence for their prevention and treatment come from these settings \citep{Smid2016}. However, since high-income countries tend to offer more funding for research and in many cases have better facilities at researchers' disposal, investigations in these regions of potential biomarkers for targeted intervention that improves clinical outcomes in this population are also of utmost importance. Once non-invasive interventions such as the ones the \textit{Building the Path to Resilience in Preterm-Born Infants} project --- of which this thesis is a constituting part --- aims to investigate are found, the need for expensive equipment such as MRI machines will become less essential, and LMIC populations will also benefit from them.  
+An important issue in the study of the neurodevelopmental effects of preterm birth is that, although most of the global burden of preterm birth is shouldered by low- and middle-income countries (LMICs), only a tiny portion of the currently available research evidence for their prevention and treatment come from these settings \citep{Smid2016}. However, since high-income countries tend to offer more funding for research and in many cases have better facilities at researchers' disposal, investigations in these regions of potential biomarkers for targeted intervention that improves clinical outcomes in this population are also of utmost importance. Once non-invasive interventions such as the ones the \textit{Building the Path to Resilience in Preterm-Born Infants} project --- of which this thesis is a constituting part --- aims to investigate are found, the need for expensive equipment such as MRI machines will prove less essential, and LMIC populations will also benefit from them.  
 
 % https://www.who.int/news-room/fact-sheets/detail/preterm-birth
 
